# FDA-Opt-Sys

./: .gitattributes  README.md  kafka_server.py  mediator.py  pyproject.toml  requirements.txt  server.py  testing.ipynb  testing2.ipynb  working.ipynb
.ipynb_checkpoints/: README-checkpoint.md  evaluate_model-checkpoint.py  kafka_server-checkpoint.py  mediator-checkpoint.py  save_data-checkpoint.py  testing-checkpoint.ipynb  working-checkpoint.ipynb
data/: save_data.py
fdaopt/: client.py  client_app.py  data.py  fda_strategies.py  parameters.py  server.py  sketch.py  training.py
fdaopt/.ipynb_checkpoints/: __init__-checkpoint.py  client-checkpoint.py  data-checkpoint.py  fda_strategies-checkpoint.py  networking-checkpoint.py  parameters-checkpoint.py  server-checkpoint.py  server_app-checkpoint.py  task-checkpoint.py  training-checkpoint.py
hyperparameters/: 0.json  0_k.json  README.md  test_1-minified.json  test_1-tmp.json  test_1.json  test_2-minified.json  test_2-tmp.json  test_2.json  test_3-minified.json  test_3.json  test_4-minified.json  test_4.json  test_8083.json  test_8084.json  test_8085.json
hyperparameters/.ipynb_checkpoints/: 0-checkpoint.json  README_hyper-checkpoint.md  test_1-checkpoint.json  test_2-checkpoint.json  test_3-checkpoint.json  test_4-checkpoint.json  test_8083-checkpoint.json  tmp-a1bfc00f-checkpoint.json  tmp-f559abd0-checkpoint.json
logs/: server.out
logs/.ipynb_checkpoints/: client-0-49ca49d3-checkpoint.err  client-1-49ca49d3-checkpoint.err  server-2805d2a8-checkpoint.err  server-2d5d8ca9-checkpoint.err
(+38 files in other folders)
